WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233031
REGRESSION(
r285624
) Using revert keyword with a css variable hits assert
https://bugs.webkit.org/show_bug.cgi?id=233031
Summary
REGRESSION(r285624) Using revert keyword with a css variable hits assert
Antti Koivisto
Reported
2021-11-12 00:52:37 PST
in inline CascadeLevel& operator--(CascadeLevel& level)
Attachments
Patch
(3.10 KB, patch)
2021-11-12 01:24 PST
,
Antti Koivisto
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-11-12 00:52:54 PST
rdar://85332271
Antti Koivisto
Comment 2
2021-11-12 01:24:50 PST
Created
attachment 444053
[details]
Patch
EWS
Comment 3
2021-11-12 02:50:55 PST
Committed
r285710
(
244169@main
): <
https://commits.webkit.org/244169@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444053
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug